allow empty list implementations